Yaw jump and prevention limit

--- a/tabs/pid_tuning.css
+++ b/tabs/pid_tuning.css
@@ -28,6 +28,7 @@
     font-weight: bold;
     color: white;
     text-align: left;
+    width: 12em;
 }
 
 .tab-pid_tuning .cf tr {
